codegen/tests/ui/struct/path.stderr
error: metadata path not specified or must be the first
  --> tests/ui/struct/path.rs:11:11
   |
11 |     #[get(aaa = "/aaa")]
   |           ^^^^^^^^^^^^
